Reimplemented everything in terms of continuations